[package]
name = "bpfaas"
version = "0.0.1"
authors = ["brainpoint <bpoint.lee@gmail.com>"]
edition = "2018"
description = "bpfaas rust SDK"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/bpfaas/sdk-rust"
repository = "https://github.com/bpfaas/sdk-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
